force-app/main/default/objects/Account_Assignment_Rule__mdt/fields/BillingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>BillingPostalCode__c</fullName>
    <description>Comma-separated postal code prefixes for Starts With comparison (e.g. 936,937). Blank = wildcard.</description>
    <label>Billing Postal Code</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>