force-app/main/default/objects/Account_Assignment_Rule__mdt/fields/BillingState__c.field-meta.xml
<CustomField>
    <fullName>BillingState__c</fullName>
    <description>Comma-separated state values (e.g. CA,California,AB,Alberta). Blank = wildcard.</description>
    <label>Billing State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>