force-app/main/default/objects/Account_Assignment_Rule__mdt/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <description>18-character Salesforce ID of the new Account Owner. Required — see Require_Owner validation rule.</description>
    <label>Owner Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>